syntax = "proto3";

package project_management;

import "google/protobuf/timestamp.proto";

option go_package = "../proto/";

service ProjectManagementService {
  rpc GetProject (ProjectRequest) returns (ProjectResponse);
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
  rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectResponse);
}

message ProjectRequest {
  uint32 project_id = 1;
}

message ProjectResponse {
  uint32 project_id = 1;
  string project_name = 2;
  string project_description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp planned_end_date = 5;
  google.protobuf.Timestamp actual_end_date = 6;
  string status = 7;
  uint32 priority = 8;
  uint32 team_id = 9;
  double budget = 10;
}

message CreateProjectRequest {
  string project_name = 1;
  string project_description = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp planned_end_date = 4;
  google.protobuf.Timestamp actual_end_date = 5;
  string status = 6;
  uint32 priority = 7;
  uint32 team_id = 8;
  double budget = 9;
}

message CreateProjectResponse {
  uint32 project_id = 1;
}

message UpdateProjectRequest {
  uint32 project_id = 1;
  string project_name = 2;
  string project_description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp planned_end_date = 5;
  google.protobuf.Timestamp actual_end_date = 6;
  string status = 7;
  uint32 priority = 8;
  uint32 team_id = 9;
  double budget = 10;
}

message UpdateProjectResponse {
  uint32 project_id = 1;
}
